--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,11 +22,13 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.indriyaclinics.com/logo.jpg" />
-    <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:url" content="https://www.indriyaclinics.com/" />
     <meta property="og:site_name" content="Indriya Clinics" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
+    <meta property="og:image:alt" content="Indriya Clinics logo — Mind &amp; ENT Health Care, Mangalore" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image:alt" content="Indriya Clinics logo — Mind &amp; ENT Health Care, Mangalore" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Indriya Clinics" />
     <meta name="geo.region" content="IN-KA" />
