fix: correct domain to indriyaclinic.com; fix S3 lifecycle rule prefix and storage class

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,8 +21,8 @@
       content="Specialist ENT and Psychiatry clinic in Mangalore with quick WhatsApp booking."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.indriyaclinics.com/logo.jpg" />
-    <meta property="og:url" content="https://www.indriyaclinics.com/" />
+    <meta property="og:image" content="https://www.indriyaclinic.com/logo.jpg" />
+    <meta property="og:url" content="https://www.indriyaclinic.com/" />
     <meta property="og:site_name" content="Indriya Clinics" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
@@ -35,11 +35,11 @@
     <meta name="geo.placename" content="Surathkal, Mangalore" />
     <meta name="geo.position" content="13.0067;74.7964" />
     <meta name="ICBM" content="13.0067, 74.7964" />
-    <link rel="alternate" href="https://www.indriyaclinics.com/" hreflang="en" />
-    <link rel="alternate" href="https://www.indriyaclinics.com/" hreflang="kn" />
-    <link rel="alternate" href="https://www.indriyaclinics.com/" hreflang="hi" />
-    <link rel="alternate" href="https://www.indriyaclinics.com/" hreflang="x-default" />
-    <link rel="canonical" href="https://www.indriyaclinics.com/" />
+    <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="en" />
+    <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="kn" />
+    <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="hi" />
+    <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="x-default" />
+    <link rel="canonical" href="https://www.indriyaclinic.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
