--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,9 @@
     <meta property="og:image:height" content="512" />
     <meta property="og:image:alt" content="Indriya Clinics logo — Mind &amp; ENT Health Care, Mangalore" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Indriya Clinics | Mind &amp; ENT Health Care in Mangalore" />
+    <meta name="twitter:description" content="Indriya Clinics in Surathkal, Mangalore offers specialist ENT and Psychiatry care by MD-qualified doctors. Book appointments instantly via WhatsApp. Open Mon-Sat." />
+    <meta name="twitter:image" content="https://www.indriyaclinic.com/logo.jpg" />
     <meta name="twitter:image:alt" content="Indriya Clinics logo — Mind &amp; ENT Health Care, Mangalore" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Indriya Clinics" />
