--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="Indriya Clinics, ENT doctor Mangalore, Psychiatry doctor Mangalore, Surathkal clinic, ENT specialist near me, psychiatrist Mangalore, ear nose throat doctor Surathkal, mental health clinic Mangalore, best ENT doctor Mangalore, Dr Jaswin Dsouza, Dr Vinitha Precilla Dsouza"
+      content="Indriya Clinics, ENT doctor Mangalore, Psychiatry doctor Mangalore, Surathkal clinic, ENT specialist near me, psychiatrist Mangalore, ear nose throat doctor Surathkal, mental health clinic Mangalore, best ENT doctor Mangalore, Dr Jaswin D'Souza ENT surgeon, Dr Vinitha D'Souza psychiatrist sexologist Mangalore"
     />
     <meta property="og:title" content="Indriya Clinics | Mind & ENT Health Care" />
     <meta
@@ -48,7 +48,15 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap"
       rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
     />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
     <style>
       /* Critical above-the-fold color to prevent FOUC */
       body { background: #F5F9FC; }
@@ -60,7 +68,7 @@
       <div style="padding:2rem;text-align:center;font-family:system-ui,sans-serif">
         <h1>Indriya Clinics — Mind & ENT Health Care</h1>
         <p>Specialist ENT and Psychiatry clinic in Surathkal, Mangalore.</p>
-        <p>Dr Jaswin Dsouza (MD, ENT) &middot; Dr Vinitha Precilla Dsouza (MD, Psychiatry)</p>
+        <p>Dr Jaswin D'Souza (MBBS, MS ENT) &middot; Dr Vinitha D'Souza (MBBS, MD Psychiatry)</p>
         <p>2nd floor, Kuduva Grandeur Commercial Complex, MRPL Road, Surathkal Junction, Mangalore-575014</p>
         <p>Mon–Sat: 9:00 AM – 8:00 PM</p>
       </div>
