--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.jpg" />
     <link rel="apple-touch-icon" href="/logo.jpg" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0F6F9A" />
     <title>Indriya Clinics | Mind & ENT Health Care in Mangalore</title>
@@ -27,7 +28,7 @@
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
     <meta property="og:image:alt" content="Indriya Clinics logo — Mind &amp; ENT Health Care, Mangalore" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Indriya Clinics | Mind &amp; ENT Health Care in Mangalore" />
     <meta name="twitter:description" content="Indriya Clinics in Surathkal, Mangalore offers specialist ENT and Psychiatry care by MD-qualified doctors. Book appointments instantly via WhatsApp. Open Mon-Sat." />
     <meta name="twitter:image" content="https://www.indriyaclinic.com/logo.jpg" />
@@ -38,9 +39,6 @@
     <meta name="geo.placename" content="Surathkal, Mangalore" />
     <meta name="geo.position" content="13.0067;74.7964" />
     <meta name="ICBM" content="13.0067, 74.7964" />
-    <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="en" />
-    <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="kn" />
-    <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="hi" />
     <link rel="alternate" href="https://www.indriyaclinic.com/" hreflang="x-default" />
     <link rel="canonical" href="https://www.indriyaclinic.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -70,7 +68,7 @@
         <p>Specialist ENT and Psychiatry clinic in Surathkal, Mangalore.</p>
         <p>Dr Jaswin D'Souza (MBBS, MS ENT) &middot; Dr Vinitha D'Souza (MBBS, MD Psychiatry)</p>
         <p>2nd floor, Kuduva Grandeur Commercial Complex, MRPL Road, Surathkal Junction, Mangalore-575014</p>
-        <p>Mon–Sat: 9:00 AM – 8:00 PM</p>
+        <p>Mon–Sat: 5:00 PM – 8:00 PM | Online consultation available via WhatsApp</p>
       </div>
     </noscript>
     <div id="root"></div>
