--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,8 @@
     <link rel="canonical" href="https://www.indriyaclinic.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="https://www.google.com" />
+    <link rel="dns-prefetch" href="https://maps.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap"
       rel="stylesheet"
@@ -55,6 +57,7 @@
         rel="stylesheet"
       />
     </noscript>
+    <link rel="preload" href="/logo.jpg" as="image" />
     <style>
       /* Critical above-the-fold color to prevent FOUC */
       body { background: #F5F9FC; }
